--- a/app_root/main/templates/main/base.html
+++ b/app_root/main/templates/main/base.html
@@ -39,7 +39,7 @@
 <header>
     <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
         <div class="container">
-            <a class="navbar-brand" href="{% url "index" %}">Home</a>
+            <a class="navbar-brand" href="{% url "main:index" %}">Home</a>
             <button
                     class="navbar-toggler"
                     type="button"
@@ -73,7 +73,7 @@
                                 >Contact information</a>
                             </li>
                             <li>
-                                <a class="dropdown-item text-white" href="{% url "about" %}">About us</a>
+                                <a class="dropdown-item text-white" href="{% url "main:about" %}">About us</a>
                             </li>
                         </ul>
                     </li>
