--- a/app_root/main/templates/main/base.html
+++ b/app_root/main/templates/main/base.html
@@ -158,39 +158,36 @@
                 </button>
                 <ul class="dropdown-menu bg-dark" data-bs-theme="dark">
                     <li>
-                        <a class="dropdown-item text-white" href="goods/catalog.html"
+                        <a class="dropdown-item text-white" href="{% url "catalog:index" %}"
                         >All Products</a
                         >
                     </li>
                     <li>
-                        <a class="dropdown-item text-white" href="goods/catalog.html"
+                        <a class="dropdown-item text-white" href="{% url "catalog:index" %}"
                         >Kitchen</a
                         >
                     </li>
                     <li>
-                        <a class="dropdown-item text-white" href="goods/catalog.html"
+                        <a class="dropdown-item text-white" href="{% url "catalog:index" %}"
                         >Bedroom</a
                         >
                     </li>
                     <li>
-                        <a class="dropdown-item text-white" href="goods/catalog.html"
+                        <a class="dropdown-item text-white" href="{% url "catalog:index" %}"
                         >Living Room</a
                         >
                     </li>
                     <li>
-                        <a class="dropdown-item text-white" href="goods/catalog.html"
+                        <a class="dropdown-item text-white" href="{% url "catalog:index" %}"
                         >Office</a
                         >
                     </li>
                     <li>
-                        <a class="dropdown-item text-white" href="goods/catalog.html"
+                        <a class="dropdown-item text-white" href="{% url "catalog:index" %}"
                         >Hardware</a
                         >
                     </li>
-                    <li>
-                        <a class="dropdown-item text-white" href="goods/catalog.html"
-                        >Decor</a
-                        >
+                    <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}">Decor</a>
                     </li>
                 </ul>
             </div>
@@ -254,6 +251,7 @@
                                   </button>
                                 </span>
                                                         <input
+
                                                                 type="text"
                                                                 class="form-control number"
                                                                 value="1"
