--- a/app_root/main/templates/main/base.html
+++ b/app_root/main/templates/main/base.html
@@ -107,7 +107,7 @@
                                 >
                             </li>
                             <li>
-                                <a class="dropdown-item text-white" href="#"
+                                <a class="dropdown-item text-white" href="{% url 'admin:index' %}"
                                 >Admin Interface</a
                                 >
                             </li>
