add fixtures for goods (cats.json & prod.json)

--- a/app_root/main/templates/main/base.html
+++ b/app_root/main/templates/main/base.html
@@ -157,38 +157,10 @@
                     />
                 </button>
                 <ul class="dropdown-menu bg-dark" data-bs-theme="dark">
-                    <li>
-                        <a class="dropdown-item text-white" href="{% url "catalog:index" %}"
-                        >All Products</a
-                        >
-                    </li>
-                    <li>
-                        <a class="dropdown-item text-white" href="{% url "catalog:index" %}"
-                        >Kitchen</a
-                        >
-                    </li>
-                    <li>
-                        <a class="dropdown-item text-white" href="{% url "catalog:index" %}"
-                        >Bedroom</a
-                        >
-                    </li>
-                    <li>
-                        <a class="dropdown-item text-white" href="{% url "catalog:index" %}"
-                        >Living Room</a
-                        >
-                    </li>
-                    <li>
-                        <a class="dropdown-item text-white" href="{% url "catalog:index" %}"
-                        >Office</a
-                        >
-                    </li>
-                    <li>
-                        <a class="dropdown-item text-white" href="{% url "catalog:index" %}"
-                        >Hardware</a
-                        >
-                    </li>
-                    <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}">Decor</a>
-                    </li>
+                    {% for category in categories %}
+                        <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}">{{ category.name }}</a>
+                        </li>
+                    {% endfor %}
                 </ul>
             </div>
             <!-- Cart Icon Triggers Modal -->
