register simple tag for categories

--- a/app_root/goods/templates/goods/catalog.html
+++ b/app_root/goods/templates/goods/catalog.html
@@ -1,186 +1,133 @@
-{% extends "main/base.html" %}
-{% load static %}
-
-{% block content %}
+{% extends "main/base.html" %} {% load static %} {% block content %}
     <div class="row">
         <!-- Filter Form -->
         <div class="dropdown mb-2">
-            <button class="btn btn-secondary dropdown-toggle btn-dark" type="button" data-bs-toggle="dropdown"
-                    aria-expanded="false">
+            <button
+                    class="btn btn-secondary dropdown-toggle btn-dark"
+                    type="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+            >
                 Filters
             </button>
-
-            <form action="" method="get" class="dropdown-menu bg-dark" data-bs-theme="dark">
+            <form
+                    action=""
+                    method="get"
+                    class="dropdown-menu bg-dark"
+                    data-bs-theme="dark"
+            >
                 <div class="form-check text-white mx-3">
-                    <input class="form-check-input" type="checkbox" name="on_sale" id="flexCheckDefault" value="on">
-                    <input type="hidden" name="q" value="request.GET.q">
+                    <input
+                            class="form-check-input"
+                            type="checkbox"
+                            name="on_sale"
+                            id="flexCheckDefault"
+                            value="on"
+                    />
+                    <input type="hidden" name="q" value="request.GET.q"/>
                     <label class="form-check-label" for="flexCheckDefault">
-                        On Sale
+                        Discounted Items
                     </label>
                 </div>
                 <p class="text-white mx-3 mt-3">Sort by:</p>
                 <div class="form-check text-white mx-3">
-                    <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault1" value="default"
-                           checked>
+                    <input
+                            class="form-check-input"
+                            type="radio"
+                            name="order_by"
+                            id="flexRadioDefault1"
+                            value="default"
+                            checked
+                    />
                     <label class="form-check-label" for="flexRadioDefault1">
                         Default
                     </label>
                 </div>
                 <div class="form-check text-white mx-3">
-                    <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault2" value="price">
+                    <input
+                            class="form-check-input"
+                            type="radio"
+                            name="order_by"
+                            id="flexRadioDefault2"
+                            value="price"
+                    />
                     <label class="form-check-label" for="flexRadioDefault2">
-                        Price: Low to High
+                        From Cheap to Expensive
                     </label>
                 </div>
                 <div class="form-check text-white mx-3">
-                    <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault3" value="-price">
+                    <input
+                            class="form-check-input"
+                            type="radio"
+                            name="order_by"
+                            id="flexRadioDefault3"
+                            value="-price"
+                    />
                     <label class="form-check-label" for="flexRadioDefault3">
-                        Price: High to Low
+                        From Expensive to Cheap
                     </label>
                 </div>
                 <button type="submit" class="btn btn-primary mx-3 mt-3">Apply</button>
             </form>
         </div>
-        <!-- Product Card -->
-        <div class="col-lg-4 col-md-6 p-4">
-            <div class="card border-primary rounded custom-shadow">
-                <img src="../deps/images/goods/set of tea table and three chairs.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <a href="../goods/product.html">
-                        <p class="card-title">Tea Table and Three Chairs</p>
-                    </a>
-                    <p class="card-text text-truncate">A set of three chairs and a designer table for the living
-                        room.</p>
-                    <p class="product_id">id: 02265</p>
-                    <div class="d-flex justify-content-between">
-                        <p><s>100</s> $</p>
-                        <p><strong>90.00 $</strong></p>
-                        <span class="badge bg-warning text-dark">Discount 10.00 %</span>
-                        <!-- <p><strong>100.00 $</strong></p> -->
-                        <a href="#" class="btn add-to-cart">
-                            <img class="mx-1" src="../deps/icons/cart-plus.svg" alt="Catalog Icon"
-                                 width="32" height="32">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Product Card -->
-        <div class="col-lg-4 col-md-6 p-4">
-            <div class="card border-primary rounded custom-shadow">
-                <img src="../deps/images/goods/set of tea table and two chairs.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <a href="#">
-                        <p class="card-title">Tea Table and Two Chairs</p>
-                    </a>
-                    <p class="card-text text-truncate">A set of a table and two chairs in a minimalist style.</p>
-                    <p class="product_id">id: 02265</p>
-                    <div class="d-flex justify-content-between">
-                        <p><s>100</s> $</p>
-                        <p><strong>90.00 $</strong></p>
-                        <span class="badge bg-warning text-dark">Discount 10.00 %</span>
-                        <!-- <p><strong>100.00 $</strong></p> -->
-                        <a href="#" class="btn add-to-cart">
-                            <img class="mx-1" src="../deps/icons/cart-plus.svg" alt="Catalog Icon"
-                                 width="32" height="32">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Product Card -->
-        <div class="col-lg-4 col-md-6 p-4">
-            <div class="card border-primary rounded custom-shadow">
-                <img src="../deps/images/goods/double bed.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <a href="#">
-                        <p class="card-title">Double Bed</p>
-                    </a>
-                    <p class="card-text text-truncate">A double bed with a headboard and very orthopedic features.</p>
-                    <p class="product_id">id: 02265</p>
-                    <div class="d-flex justify-content-between">
-                        <p><s>100</s> $</p>
-                        <p><strong>90.00 $</strong></p>
-                        <span class="badge bg-warning text-dark">Discount 10.00 %</span>
-                        <!-- <p><strong>100.00 $</strong></p> -->
-                        <a href="#" class="btn">
-                            <img class="mx-1" src="../deps/icons/cart-plus.svg" alt="Catalog Icon"
-                                 width="32" height="32">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Product Card -->
-        <div class="col-lg-4 col-md-6 p-4">
-            <div class="card border-primary rounded custom-shadow">
-                <img src="../deps/images/goods/kitchen table.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <a href="#">
-                        <p class="card-title">Kitchen Table with Sink</p>
-                    </a>
-                    <p class="card-text text-truncate">A dining kitchen table with a built-in sink and chairs.</p>
-                    <p class="product_id">id: 02265</p>
-                    <div class="d-flex justify-content-between">
-                        <p><s>100</s> $</p>
-                        <p><strong>90.00 $</strong></p>
-                        <span class="badge bg-warning text-dark">Discount 10.00 %</span>
-                        <!-- <p><strong>100.00 $</strong></p> -->
-                        <a href="#" class="btn">
-                            <img class="mx-1" src="../deps/icons/cart-plus.svg" alt="Catalog Icon"
-                                 width="32" height="32">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Product Card -->
-        <div class="col-lg-4 col-md-6 p-4">
-            <div class="card border-primary rounded custom-shadow">
-                <img src="../deps/images/goods/kitchen table 2.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <a href="#">
-                        <p class="card-title">Kitchen Table with Built-in Features</p>
-                    </a>
-                    <p class="card-text text-truncate">A kitchen table with a built-in stove and sink. Many shelves and
-                        generally beautiful.</p>
-                    <p class="product_id">id: 02265</p>
-                    <div class="d-flex justify-content-between">
-                        <p><s>100</s> $</p>
-                        <p><strong>90.00 $</strong></p>
-                        <span class="badge bg-warning text-dark">Discount 10.00 %</span>
-                        <!-- <p><strong>100.00 $</strong></p> -->
-                        <a href="#" class="btn">
-                            <img class="mx-1" src="../deps/icons/cart-plus.svg" alt="Catalog Icon"
-                                 width="32" height="32">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Product Card -->
-        <div class="col-lg-4 col-md-6 p-4">
-            <div class="card border-primary rounded custom-shadow">
-                <img src="../deps/images/goods/corner sofa.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <a href="#">
-                        <p class="card-title">Corner Sofa for Living Room</p>
-                    </a>
-                    <p class="card-text text-truncate">A corner sofa that unfolds into a double bed, perfect for the
-                        living room and guests!</p>
-                    <p class="product_id">id: 02265</p>
-                    <div class="d-flex justify-content-between">
-                        <p><s>100</s> $</p>
-                        <p><strong>90.00 $</strong></p>
-                        <span class="badge bg-warning text-dark">Discount 10.00 %</span>
-                        <!-- <p><strong>100.00 $</strong></p> -->
-                        <a href="#" class="btn">
-                            <img class="mx-1" src="../deps/icons/cart-plus.svg" alt="Catalog Icon"
-                                 width="32" height="32">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
-{% endblock content %}
+
+    <div class="row">
+        {% for product in goods %}
+            <!-- Product Card -->
+            <div class="col-lg-4 col-md-6 p-4">
+                <div class="card border-primary rounded custom-shadow">
+                    {% if product.image %}
+                        <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+                    {% else %}
+                        <img src="{% static "deps/images/Not found image.png" %}" class="card-img-top" alt="...">
+                    {% endif %}
+                    <div class="card-body">
+                        <a href="../goods/product.html">
+                            <p class="card-title">{{ product.name }}</p>
+                        </a>
+                        <p class="card-text text-truncate">{{ product.description }}</p>
+                        <p class="product_id">id: {{ product.display_id }}</p>
+                        <div class="d-flex justify-content-between">
+
+                            {% if product.discount %}
+                                <p><s>{{ product.price }}</s> $</p>
+                                <p><strong>{{ product.sell_price }}</strong></p>
+                                <span class="badge bg-warning text-dark">Discount {{ product.discount }} %</span>
+                            {% else %}
+                                <p><strong>{{ product.price }} $</strong></p>
+                            {% endif %}
+
+                            <a href="#" class="btn add-to-cart">
+                                <img class="mx-1" src="{% static "deps/icons/cart-plus.svg" %}" alt="Catalog Icon"
+                                     width="32" height="32">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+
+    <!-- Pagination -->
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center my-4 custom-shadow d-flex">
+            <li class="page-item disabled">
+                <a class="page-link">Previous</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+                <a class="page-link" href="#">Next</a>
+            </li>
+        </ul>
+    </nav>
+{% endblock %}
+{% block footer %}
+    <footer class="py-4 bg-dark">
+        <div class="container">
+            <p class="m-0 text-center text-white">Copyright &copy; Mamaevsky</p>
+        </div>
+    </footer>
+{% endblock %}
