--- a/app_root/main/templates/main/base.html
+++ b/app_root/main/templates/main/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load goods_tags %}
 
 <!doctype html>
 <html lang="en">
@@ -157,6 +158,7 @@
                     />
                 </button>
                 <ul class="dropdown-menu bg-dark" data-bs-theme="dark">
+                    {% tag_categories as categories %}
                     {% for category in categories %}
                         <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}">{{ category.name }}</a>
                         </li>
