--- a/app_root/goods/templates/goods/product.html
+++ b/app_root/goods/templates/goods/product.html
@@ -1,43 +1,58 @@
-{% extends "main/base.html" %}
-{% load static %}
-
-{% block content %}
-    <div class="container mt-5">
-        <div class="card mb-4 custom-shadow">
-            <div class="row">
-                <!-- Thumbnails -->
-                <div class="col-md-4">
-                    <img src="../deps/images/goods/set of tea table and three chairs.jpg"
-                         class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal1">
-                </div>
-                <div class="col-md-4 ">
-                    <p class="product_id mt-3">id: 002654</p>
-                </div>
-                <!-- Enlarge image in modal window -->
-                <div class="modal fade" id="imageModal1" tabindex="-1"
-                     aria-labelledby="imageModal1Label" aria-hidden="true">
-                    <div class="modal-dialog modal-lg">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="imageModal1Label">Image 1</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                <img src="../deps/images/goods/set of tea table and three chairs.jpg"
-                                     class="img-fluid" alt="Image 1">
-                            </div>
-                        </div>
-                    </div>
-                </div>
+{% extends "main/base.html" %} {% load static %} {% block content %}
+<div class="container mt-5">
+  <div class="card mb-4 custom-shadow">
+    <div class="row">
+      <!-- Thumbnails -->
+      <div class="col-md-4">
+        <img
+          src="{{ product.image.url }}"
+          class="img-thumbnail"
+          data-bs-toggle="modal"
+          data-bs-target="#imageModal1"
+        />
+      </div>
+      <div class="col-md-4">
+        <p class="product_id mt-3">{{ product.display_id }}</p>
+      </div>
+      <!-- Enlarge image in modal window -->
+      <div
+        class="modal fade"
+        id="imageModal1"
+        tabindex="-1"
+        aria-labelledby="imageModal1Label"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="imageModal1Label">
+                {{ product.name }}
+              </h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
             </div>
-            <!-- Product Description -->
-            <div class="card-body">
-                <p class="card-text">Price: <strong>150.00 $</strong></p>
-                <h5 class="card-title">Tea Table and Three Chairs</h5>
-                <p class="card-text">A set of three chairs and a designer table for the living room.</p>
-                <a href="#" class="btn btn-dark add-to-cart">Add to Cart</a>
+            <div class="modal-body">
+              <img
+                src="{{ product.image.url }}"
+                class="img-fluid"
+                alt="Image 1"
+              />
             </div>
+          </div>
         </div>
+      </div>
     </div>
+    <!-- Product Description -->
+    <div class="card-body">
+      <p class="card-text">Price: <strong>{{ product.sell_price }}</strong></p>
+      <h5 class="card-title">{{ product.name }}</h5>
+      <p class="card-text">{{ product.description }}</p>
+      <a href="#" class="btn btn-dark add-to-cart">Add to Cart</a>
+    </div>
+  </div>
+</div>
 {% endblock %}
