--- a/app_root/goods/templates/goods/catalog.html
+++ b/app_root/goods/templates/goods/catalog.html
@@ -1,4 +1,9 @@
-{% extends "main/base.html" %} {% load static %} {% block content %}
+{% extends "main/base.html" %}
+{% load static %}
+{% load goods_tags %}
+
+
+{% block content %}
     <div class="row">
         <!-- Filter Form -->
         <div class="dropdown mb-2">
@@ -11,7 +16,7 @@
                 Filters
             </button>
             <form
-                    action=""
+                    action="{% url 'catalog:index' slug_url %}"
                     method="get"
                     class="dropdown-menu bg-dark"
                     data-bs-theme="dark"
@@ -23,8 +28,11 @@
                             name="on_sale"
                             id="flexCheckDefault"
                             value="on"
+                            {% if request.GET.on_sale == 'on' %}
+                            checked
+                            {% endif %}
                     />
-                    <input type="hidden" name="q" value="request.GET.q"/>
+                    {% comment %}<input type="hidden" name="q" value="request.GET.q"/>{% endcomment %}
                     <label class="form-check-label" for="flexCheckDefault">
                         Discounted Items
                     </label>
@@ -37,7 +45,9 @@
                             name="order_by"
                             id="flexRadioDefault1"
                             value="default"
+                            {% if not request.GET.order_by or request.GET.order_by == 'default' %}
                             checked
+                            {% endif %}
                     />
                     <label class="form-check-label" for="flexRadioDefault1">
                         Default
@@ -50,6 +60,9 @@
                             name="order_by"
                             id="flexRadioDefault2"
                             value="price"
+                            {% if request.GET.order_by == 'price' %}
+                            checked
+                            {% endif %}
                     />
                     <label class="form-check-label" for="flexRadioDefault2">
                         From Cheap to Expensive
@@ -62,6 +75,9 @@
                             name="order_by"
                             id="flexRadioDefault3"
                             value="-price"
+                            {% if request.GET.order_by == '-price' %}
+                            checked
+                            {% endif %}
                     />
                     <label class="form-check-label" for="flexRadioDefault3">
                         From Expensive to Cheap
@@ -113,20 +129,22 @@
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center my-4 custom-shadow d-flex">
             <li class="page-item {% if not goods.has_previous %} disabled {% endif %}">
-                <a class="page-link" href="{% if goods.has_previous %}?page={{ goods.previous_page_number }}{% else %}#
+                <a class="page-link"
+                   href="{% if goods.has_previous %}?{% change_params page=goods.previous_page_number %}{% else %}#
                 {% endif %} ">Previous</a>
             </li>
 
             {% for page in goods.paginator.page_range %}
                 {% if page >= goods.number|add:-2 and page <= goods.number|add:2 %}
                     <li class="page-item {% if goods.number == page %} active {% endif %} ">
-                        <a class="page-link" href="?page={{ page }}">{{ page }}</a>
+                        <a class="page-link" href="?{% change_params page=page %}">{{ page }}</a>
                     </li>
                 {% endif %}
             {% endfor %}
 
             <li class="page-item {% if not goods.has_next %} disabled {% endif %}">
-                <a class="page-link" href="{% if goods.has_next %}?page={{ goods.next_page_number }}{% else %}#
+                <a class="page-link"
+                   href="{% if goods.has_next %}?{% change_params page=goods.next_page_number %}{% else %}#
                 {% endif %} ">Next</a>
             </li>
         </ul>
