add simple search

--- a/app_root/goods/templates/goods/catalog.html
+++ b/app_root/goods/templates/goods/catalog.html
@@ -16,7 +16,8 @@
                 Filters
             </button>
             <form
-                    action="{% url 'catalog:index' slug_url %}"
+                    action="
+                            {% if request.GET.q %}{% url 'catalog:search' %}{% else %}{% url 'catalog:index' slug_url %}{% endif %}"
                     method="get"
                     class="dropdown-menu bg-dark"
                     data-bs-theme="dark"
@@ -32,7 +33,9 @@
                             checked
                             {% endif %}
                     />
-                    {% comment %}<input type="hidden" name="q" value="request.GET.q"/>{% endcomment %}
+                    {% if request.GET.q %}
+                        <input type="hidden" name="q" value="{{ request.GET.q }}"/>
+                    {% endif %}
                     <label class="form-check-label" for="flexCheckDefault">
                         Discounted Items
                     </label>
