--- a/app_root/goods/templates/goods/catalog.html
+++ b/app_root/goods/templates/goods/catalog.html
@@ -17,6 +17,11 @@
             </button>
             <form
                     action="
+
+
+
+
+
                             {% if request.GET.q %}{% url 'catalog:search' %}{% else %}{% url 'catalog:index' slug_url %}{% endif %}"
                     method="get"
                     class="dropdown-menu bg-dark"
@@ -90,6 +95,13 @@
             </form>
         </div>
     </div>
+    {% if request.GET.q %}
+        <h3 class="mt-4">Search results for the request: {{ request.GET.q }}</h3>
+        {% if not goods %}
+            <link rel="stylesheet" href="{% static "deps/css/my_footer_css.css" %}">
+            <h2 class="mt-4">Nothing found for the request</h2>
+        {% endif %}
+    {% endif %}
 
     <div class="row">
         {% for product in goods %}
@@ -103,9 +115,25 @@
                     {% endif %}
                     <div class="card-body">
                         <a href="{% url 'catalog:product' product.slug %}">
-                            <p class="card-title">{{ product.name }}</p>
+                            <p class="card-title">
+                                {% autoescape off %}
+                                    {% if product.headline %}
+                                        {{ product.headline }}
+                                    {% else %}
+                                        {{ product.name }}
+                                    {% endif %}
+                                {% endautoescape %}
+                            </p>
                         </a>
-                        <p class="card-text">{{ product.description|truncatechars:35 }}</p>
+                        <p class="card-text">
+                            {% autoescape off %}
+                                {% if product.bodyline %}
+                                    {{ product.bodyline|truncatechars:100 }}
+                                {% else %}
+                                    {{ product.description|truncatechars:35 }}
+                                {% endif %}
+                            {% endautoescape %}
+                        </p>
                         <p class="product_id">id: {{ product.display_id }}</p>
                         <div class="d-flex justify-content-between">
 
@@ -129,29 +157,32 @@
     </div>
 
     <!-- Pagination -->
-    <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center my-4 custom-shadow d-flex">
-            <li class="page-item {% if not goods.has_previous %} disabled {% endif %}">
-                <a class="page-link"
-                   href="{% if goods.has_previous %}?{% change_params page=goods.previous_page_number %}{% else %}#
-                {% endif %} ">Previous</a>
-            </li>
-
-            {% for page in goods.paginator.page_range %}
-                {% if page >= goods.number|add:-2 and page <= goods.number|add:2 %}
-                    <li class="page-item {% if goods.number == page %} active {% endif %} ">
-                        <a class="page-link" href="?{% change_params page=page %}">{{ page }}</a>
+    {% if goods %}
+        <nav aria-label="Page navigation example">
+            <div class="custom-shadow d-flex justify-content-center my-4">
+                <ul class="pagination">
+                    <li class="page-item {% if not goods.has_previous %}disabled{% endif %}">
+                        <a class="page-link"
+                           href="{% if goods.has_previous %}?
+                       {% change_params page=goods.previous_page_number %}{% else %}#{% endif %}">Previous</a>
                     </li>
-                {% endif %}
-            {% endfor %}
+                    {% for page in goods.paginator.page_range %}
+                        {% if page >= goods.number|add:-2 and page <= goods.number|add:2 %}
+                            <li class="page-item {% if goods.number == page %} active {% endif %}">
+                                <a class="page-link" href="?{% change_params page=page %}">{{ page }}</a>
+                            </li>
+                        {% endif %}
+                    {% endfor %}
 
-            <li class="page-item {% if not goods.has_next %} disabled {% endif %}">
-                <a class="page-link"
-                   href="{% if goods.has_next %}?{% change_params page=goods.next_page_number %}{% else %}#
-                {% endif %} ">Next</a>
-            </li>
-        </ul>
-    </nav>
+                    <li class="page-item {% if not goods.has_next %}disabled{% endif %}">
+                        <a class="page-link" href="{% if goods.has_next %}?
+                        {% change_params page=goods.next_page_number %}{% else %}#{% endif %}">Next</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    {% endif %}
+
 {% endblock %}
 {% block footer %}
     <footer class="py-4 bg-dark">
