--- a/app_root/goods/templates/goods/catalog.html
+++ b/app_root/goods/templates/goods/catalog.html
@@ -1,4 +1,4 @@
-{% extends "main/base.html" %}
+{% extends "base.html" %}
 {% load static %}
 {% load goods_tags %}
 
@@ -17,6 +17,9 @@
             </button>
             <form
                     action="
+
+
+
 
 
 
