add login form & controller

--- a/app_root/templates/base.html
+++ b/app_root/templates/base.html
@@ -296,6 +296,7 @@
             </div>
             <div class="col-lg-10">
                 <!-- Page content -->
+                {% include "includes/notifications.html" %}
                 {% block content %} {% endblock %}
             </div>
         </div>
