--- a/app_root/users/templates/users/profile.html
+++ b/app_root/users/templates/users/profile.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
+
+{% load carts_tags %}
+
 {% block content %}
     <div class="row">
         <div class="container mt-5">
@@ -78,11 +81,13 @@
                     </div>
                 </div>
                 <!-- Cart -->
+                {% user_carts request as carts %}
                 <div class="col-md-7">
                     <div class="bg-white p-4 mb-4 mx-2 rounded custom-shadow">
                         <h3 class="text-center mb-4">Cart</h3>
                         <div class="container" id="cart-items-container">
                             <!-- Cart layout -->
+                            {% include "carts/includes/included_cart.html" %}
                             <!-- End of cart layout -->
                         </div>
                         <a class="btn btn-dark" href="../orders/create_order.html">
