--- a/app_root/goods/templates/goods/catalog.html
+++ b/app_root/goods/templates/goods/catalog.html
@@ -3,8 +3,8 @@
 {% load goods_tags %}
 
 {% block modal_cart %}
-{% include "includes/cart_button.html" %}
-{% endblock  %}
+    {% include "includes/cart_button.html" %}
+{% endblock %}
 
 
 {% block content %}
@@ -21,6 +21,7 @@
             </button>
             <form
                     action="
+
 
 
 
@@ -152,7 +153,9 @@
                                 <p><strong>{{ product.price }} $</strong></p>
                             {% endif %}
 
-                            <a href="{% url "cart:cart_add" product.slug %}" class="btn add-to-cart">
+                            <a href="{% url "cart:cart_add" %}" class="btn add-to-cart"
+                               data-product-id="{{ product.id }}">
+                                {% csrf_token %}
                                 <img class="mx-1" src="{% static "deps/icons/cart-plus.svg" %}" alt="Catalog Icon"
                                      width="32" height="32">
                             </a>
