--- a/app_root/users/templates/users/profile.html
+++ b/app_root/users/templates/users/profile.html
@@ -90,9 +90,11 @@
                             {% include "carts/includes/included_cart.html" %}
                             <!-- End of cart layout -->
                         </div>
+                         {% if carts %}
                         <a class="btn btn-dark" href="../orders/create_order.html">
                             Checkout
                         </a>
+                        {% endif %}
                     </div>
                 </div>
                 <!-- Orders -->
