add final fix & requirements.txt

--- a/app_root/carts/templates/carts/includes/included_cart.html
+++ b/app_root/carts/templates/carts/includes/included_cart.html
@@ -52,3 +52,9 @@
 
     </div>
 </div>
+{% if carts and not orders %}
+<a class="btn btn-dark" href="{% url "orders:create_order" %}">
+    Checkout
+</a>
+{% endif %}
+
